# shellingham

./: .gitignore  CHANGELOG.rst  MANIFEST.in  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
news/: 1-3404955f.trivial  1-b2e9bef5.bugfix  10.bugfix.rst  14.bugfix.rst  15.bugfix  16.bugfix.rst  2.bugfix  20.feature.rst  21.bugfix.rst  24.bugfix.rst  27.bugfix.rst  3.feature  4.feature  42.feature.rst  5.feature  6.bugfix  68.bugfix.rst  7.bugfix  72.bugfix.rst  78.bugfix.rst  8.bugfix  81.bugfix.rst
src/shellingham/: __init__.py  __main__.py  _core.py  nt.py  posix.py  windows.py
src/shellingham/posix/: __init__.py  kvm.py  proc.py  ps.py
tasks/: __init__.py  news.py  pack.py  vers.py
tests/: test_posix.py  test_ps.py
