[build-system]
requires = ["setuptools", "wheel"]

[tool.towncrier]
package = "shellingham"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "news/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/sarugaku/shellingham/issues/{issue}>`_"
template = "tasks/CHANGELOG.rst.jinja2"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "trivial"
name = "Trivial Changes"
showcontent = false

[[tool.towncrier.type]]
directory = "removal"
name = "Removals and Deprecations"
showcontent = true
