[build-system]
requires = ["setuptools >=70.0.0"]

[project]
name = "shellingham"
description = "Tool to Detect Surrounding Shell"
authors = [
    { name = "Tzu-ping Chung", email = "uranusjr@gmail.com" }
]
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
keywords = ["shell"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">= 3.7"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/sarugaku/shellingham"

[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 79

[tool.towncrier]
package = "shellingham"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "news/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/sarugaku/shellingham/issues/{issue}>`_"
template = "tasks/CHANGELOG.rst.jinja2"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "trivial"
name = "Trivial Changes"
showcontent = false

[[tool.towncrier.type]]
directory = "removal"
name = "Removals and Deprecations"
showcontent = true
