[metadata]
name = shellingham
description = Tool to Detect Surrounding Shell
url = https://github.com/sarugaku/shellingham
author = Tzu-ping Chung
author_email = uranusjr@gmail.com
long_description = file: README.rst
license = ISC License
keywords =
    shell
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = true
python_requires = >=2.6,!=3.0,!=3.1,!=3.2,!=3.3
install_requires =

[bdist_wheel]
universal = 1
