[metadata]
name = shellingham
version = attr: shellingham.__version__
description = Tool to Detect Surrounding Shell
url = https://github.com/sarugaku/shellingham
author = Tzu-ping Chung
author_email = uranusjr@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license = ISC License
keywords =
    shell
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.6,!=3.0,!=3.1,!=3.2,!=3.3
install_requires =
zip_safe = true

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
