[metadata]
name = shellingham
version = attr: shellingham.__version__
description = Tool to Detect Surrounding Shell
url = https://github.com/sarugaku/shellingham
author = Tzu-ping Chung
author_email = uranusjr@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license = ISC License
keywords =
    shell
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
zip_safe = true

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
